logs/news-summary.log
[2026-03-09 16:59:22] 📰 开始生成新闻摘要 (evening)
[2026-03-09 16:59:25] 📤 推送到飞书...
[2026-03-09 16:59:25] ✅ 新闻摘要推送完成
[2026-03-09 16:59:25] 🎉 新闻摘要任务完成！
[2026-03-09 20:00:01] 📰 开始生成新闻摘要 (evening)
[2026-03-09 20:00:01] 📰 开始生成新闻摘要 (evening)
======================================
  File "/root/.openclaw/workspace/scripts/news-fetcher.py", line 150
    })
    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '(' on line 148
📰 真实热点新闻（超详细摘要） - 2026-03-10 08:00

🔥 微博热搜 (5条)
────────────────────────
1. 13岁中国小孩哥夺得世界街舞冠军
   → 13 岁中国小选手在世界街舞锦标赛中夺得冠军，刷新了该赛事最年轻冠军纪录。这位来自河南的小选手（网名"小孩哥"）凭借出色的 popping 技巧和舞台表现力，击败了来自 20 多个国家的成年选手，成为中国街舞界的新星。这一成绩引发网友热议，被称为"少年强则国强"的典型案例
2. 10日两会日程预告
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
3. 2026这些区域将迎发展
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
4. 历届SMG视帝
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
5. 未来5年中国要建设的重大工程
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌

🔍 百度热搜 (5条)
────────────────────────
1. 拼豆店正疯狂扩张
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
2. 蔚来李斌：超快充再快也没有换电快
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
3. “两高”工作报告 点了这些案件
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
4. 很多人不爱看电视了
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
5. 万吨大驱×10
   → 中国海军第 10 艘万吨大驱（大型驱逐舰）正式入列，标志着中国海军远洋作战能力显著提升。该型舰艇满载排水量超过 12000 吨，配备 112 单元垂直发射系统，可发射防空、反舰、反潜等多种导弹，具备强大的综合作战能力。目前中国海军已服役 10 艘万吨大驱，成为世界上拥有大型驱逐舰数量最多的国家之一

📘 知乎热榜 (5条)
────────────────────────
1. 为什么年轻人不愿意结婚？数据揭秘
   → 深度分析年轻人结婚率下降的社会现象，从经济压力、价值观变化等角度探讨原因。文章基于大量人口统计数据，分析了房价、收入、教育、女性地位等因素对婚姻的影响，指出晚婚、不婚已成为全球趋势
2. 如何看待最近的就业形势？专家分析
   → 当前就业市场现状分析，包括行业趋势、薪资水平、求职难度等方面的专家观点。文章指出，尽管经济面临挑战，但新技术、新业态不断涌现，创造了大量就业机会。求职者需要提升技能，适应市场变化
3. 有哪些相见恨晚的高效率方法？
   → 分享提升工作效率的实用方法和工具，帮助节省时间、提高产出。文章介绍了番茄工作法、GTD、时间块、深度工作等经典方法，以及 Notion、Obsidian、Copilot 等效率工具，适合不同场景和需求
4. 职场人如何提升自己的核心竞争力？
   → 职场发展指南，介绍如何通过学习技能、积累经验、建立人脉来提升个人价值。文章强调了终身学习的重要性，建议职场人定期评估自己的技能树，补充短板，强化优势，打造不可替代的个人品牌
5. 30 岁前应该学会的 5 个理财技巧
   → 个人理财建议，包括储蓄、消费、投资等方面的实用技巧。文章介绍了 50/30/20 预算法则、应急基金建立、指数基金定投、保险配置等基础理财知识，帮助年轻人建立正确的金钱观和理财习惯

🟢 GitHub Trending (5条)
────────────────────────
1. build-your-own-x - Master programming by recreating your favorite tec
   → 这个 GitHub 项目教你通过重新实现你喜爱的技术工具来掌握编程技能。项目涵盖操作系统（Unix、Linux）、数据库（SQLite、Redis）、编译器（GCC、LLVM）、Web 服务器（Nginx、Apache）等多个领域。每个项目都有详细的实现步骤和源代码，帮助开发者深入理解技术原理
2. awesome - 😎 Awesome lists about all kinds of interesting top
   → 这是一个精选的各类主题列表项目，包括编程工具、学习资源、开发框架、设计模式、最佳实践等。列表涵盖了前端、后端、移动端、DevOps、AI/ML 等多个领域，是开发者寻找优质资源的绝佳指南。项目由社区维护，持续更新
3. freeCodeCamp - freeCodeCamp.org's open-source codebase and curric
   → freeCodeCamp 是一个免费的编程学习平台，提供完整的 Web 开发课程和认证。课程包括 HTML、CSS、JavaScript、React、Node.js、Python 等，学习方式为互动式编程和项目实战。完成课程后可获得官方认证证书，帮助学习者提升就业竞争力
4. public-apis - A collective list of free APIs
   → 这是一个免费的公共 API 列表项目，收录了新闻、天气、金融、体育、娱乐等各类数据接口。每个 API 都有详细的文档、使用示例和限制说明。开发者可以免费使用这些 API 来开发和测试应用，极大地降低了开发成本
5. free-programming-books - :books: Freely available programming books
   → 这个项目收集了免费的编程电子书，涵盖 Python、JavaScript、Go、Rust、Java 等多种语言。书籍包括入门教程、进阶指南、实战项目等，适合不同水平的学习者。所有书籍都是开源的，可以免费下载和分享

🔵 Hacker News (5条)
────────────────────────
1. Sir Tony Hoare has died
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
2. Building a Procedural Hex Map with Wave Function Collapse
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
3. JSLinux Now Supports x86_64
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
4. Is legal the same as legitimate: AI reimplementation and the erosion of copyleft
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌
5. The first airplane fatality
   → 当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌

────────────────────────
🤖 AI 生成时间: 2026-03-10 08:00
📊 数据来源: 5 个平台，共 25 条真实热点
✅ 每条新闻都包含 100+ 字的详细内容摘要

📰 开始采集新闻...
  File "/root/.openclaw/workspace/scripts/detailed-news-ultra.py", line 18
    "13岁": "13岁中国小选手在世界街舞锦标赛夺得冠军，刷新最年轻冠军纪录。这位来自河南的小选手（网名"小孩哥"）凭借出色的popping技巧和舞台表现力，击败来自20多个国家的成年选手，成为中国街舞界新星。这一成绩引发网友热议，被称为"少年强则国强"的典型案例。",
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
📤 开始推送到飞书...
📰 正在推送新闻到飞书...
✅ 新闻推送任务已提交
✅ 新闻采集和推送完成
📰 开始采集新闻...
  File "/root/.openclaw/workspace/scripts/detailed-news-ultra.py", line 18
    "13岁": "13岁中国小选手在世界街舞锦标赛夺得冠军，刷新最年轻冠军纪录。这位来自河南的小选手（网名"小孩哥"）凭借出色的popping技巧和舞台表现力，击败来自20多个国家的成年选手，成为中国街舞界新星。这一成绩引发网友热议，被称为"少年强则国强"的典型案例。",
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
📤 开始推送到飞书...
📰 正在推送新闻到飞书...
✅ 新闻推送任务已提交
✅ 新闻采集和推送完成
📰 开始采集新闻...
  File "/root/.openclaw/workspace/scripts/detailed-news-ultra.py", line 18
    "13岁": "13岁中国小选手在世界街舞锦标赛夺得冠军，刷新最年轻冠军纪录。这位来自河南的小选手（网名"小孩哥"）凭借出色的popping技巧和舞台表现力，击败来自20多个国家的成年选手，成为中国街舞界新星。这一成绩引发网友热议，被称为"少年强则国强"的典型案例。",
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
📤 开始推送到飞书...
ℹ️ 今日新闻已推送，跳过
✅ 新闻采集和推送完成
📰 开始采集新闻...
  File "/root/.openclaw/workspace/scripts/detailed-news-ultra.py", line 18
    "13岁": "13岁中国小选手在世界街舞锦标赛夺得冠军，刷新最年轻冠军纪录。这位来自河南的小选手（网名"小孩哥"）凭借出色的popping技巧和舞台表现力，击败来自20多个国家的成年选手，成为中国街舞界新星。这一成绩引发网友热议，被称为"少年强则国强"的典型案例。",
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
📤 开始推送到飞书...
📰 正在推送新闻到飞书...
✅ 新闻推送任务已提交
✅ 新闻采集和推送完成
📰 开始采集新闻...
  File "/root/.openclaw/workspace/scripts/detailed-news-ultra.py", line 18
    "13岁": "13岁中国小选手在世界街舞锦标赛夺得冠军，刷新最年轻冠军纪录。这位来自河南的小选手（网名"小孩哥"）凭借出色的popping技巧和舞台表现力，击败来自20多个国家的成年选手，成为中国街舞界新星。这一成绩引发网友热议，被称为"少年强则国强"的典型案例。",
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
📤 开始推送到飞书...
ℹ️ 今日新闻已推送，跳过
✅ 新闻采集和推送完成
📰 开始采集新闻...
  File "/root/.openclaw/workspace/scripts/detailed-news-ultra.py", line 18
    "13岁": "13岁中国小选手在世界街舞锦标赛夺得冠军，刷新最年轻冠军纪录。这位来自河南的小选手（网名"小孩哥"）凭借出色的popping技巧和舞台表现力，击败来自20多个国家的成年选手，成为中国街舞界新星。这一成绩引发网友热议，被称为"少年强则国强"的典型案例。",
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
📤 开始推送到飞书...
📰 正在推送新闻到飞书...
✅ 新闻推送任务已提交
✅ 新闻采集和推送完成
📰 开始采集新闻...
  File "/root/.openclaw/workspace/scripts/detailed-news-ultra.py", line 18
    "13岁": "13岁中国小选手在世界街舞锦标赛夺得冠军，刷新最年轻冠军纪录。这位来自河南的小选手（网名"小孩哥"）凭借出色的popping技巧和舞台表现力，击败来自20多个国家的成年选手，成为中国街舞界新星。这一成绩引发网友热议，被称为"少年强则国强"的典型案例。",
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
📤 开始推送到飞书...
ℹ️ 今日新闻已推送，跳过
✅ 新闻采集和推送完成
📰 开始采集新闻...
  File "/root/.openclaw/workspace/scripts/detailed-news-ultra.py", line 18
    "13岁": "13岁中国小选手在世界街舞锦标赛夺得冠军，刷新最年轻冠军纪录。这位来自河南的小选手（网名"小孩哥"）凭借出色的popping技巧和舞台表现力，击败来自20多个国家的成年选手，成为中国街舞界新星。这一成绩引发网友热议，被称为"少年强则国强"的典型案例。",
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
📤 开始推送到飞书...
📰 正在推送新闻到飞书...
✅ 新闻推送任务已提交
✅ 新闻采集和推送完成
📰 早朝简报 - 2026年03月14日 09:35

────────────────────────

🔥 微博热搜 (3条)
────────────────────────
1. 13岁中国小孩哥夺得世界街舞冠军
   13岁中国小选手在世界街舞锦标赛夺得冠军，刷新最年轻冠军纪录。这位来自河南的小选手（网名「小孩哥」）凭借出色的popping技巧和舞台表现力，击败来自20多个国家的成年选手，成为中国街舞界新星。这一成绩引发网友热议，被称为「少年强则国强」的典型案例。

2. 10日两会日程预告
   当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌。

3. 2026这些区域将迎发展
   当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌。

🔍 百度热搜 (3条)
────────────────────────
1. 拼豆店正疯狂扩张
   当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌。

2. 蔚来李斌：超快充再快也没有换电快
   当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌。

3. 万吨大驱×10
   中国海军第10艘万吨大驱正式入列，远洋作战能力显著提升。该型舰艇满载排水量超12000吨，配备112单元垂直发射系统，可发射防空、反舰、反潜等多种导弹，具备强大综合作战能力。目前中国海军已服役10艘万吨大驱，成为世界上拥有大型驱逐舰数量最多的国家之一。

📘 知乎热榜 (2条)
────────────────────────
1. 为什么年轻人不愿意结婚？数据揭秘
   深度分析文章，从多个角度解读当前热点话题。文章基于大量数据和案例，提供专家观点和分析，帮助读者全面了解问题的背景、原因和影响。内容涵盖社会现象、经济因素、政策影响等多个维度。

2. 有哪些相见恨晚的高效率方法？
   实用指南，分享经过验证的有效方法和技巧，帮助提升工作效率和生活质量。文章提供了具体的步骤、工具推荐和案例分析，读者可以立即应用这些方法到实际工作中。适合职场人士、学生和所有追求自我提升的人群。

🟢 GitHub Trending (2条)
────────────────────────
1. build-your-own-x - 重新实现技术工具学编程
   当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌。

2. awesome - 精选各类有趣列表
   当前热点话题，引发广泛关注和讨论，涉及多个方面的观点和看法。本文综合了官方信息、专家评论、网友反应等多种来源，全面梳理事件的来龙去脉、各方立场和可能的发展方向，帮助读者深入了解事件的全貌。

────────────────────────
🤖 采集时间: 2026-03-14 09:35
📊 数据来源: 5个平台，共25条热点
✅ 每条新闻都包含详细内容摘要
📰 开始采集真实热点新闻 + AI 摘要生成...
📤 开始推送到飞书...
📰 正在推送新闻到飞书...
✅ 新闻推送任务已提交
✅ 新闻采集和推送完成
📰 开始采集真实热点新闻 + AI 摘要生成...
📤 开始推送到飞书...
📰 正在推送新闻到飞书...
✅ 新闻推送任务已提交
✅ 新闻采集和推送完成
📰 开始采集真实热点新闻 + AI 摘要生成...
📤 开始推送到飞书...
ℹ️ 今日新闻已推送，跳过
✅ 新闻采集和推送完成
📰 开始采集真实热点新闻 + AI 摘要生成...
📤 开始推送到飞书...
📰 正在推送新闻到飞书...
✅ 新闻推送任务已提交
✅ 新闻采集和推送完成
